welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:12: error: ';' expected but 'return' found.
  }return 0
   ^